# jockey-cli

./: .gitignore  Cargo.toml  README.md  jockey-img.md
examples/: basic_usage.rs
src/: cli.rs  compression.rs  error.rs  lib.rs  output.rs  processor.rs  tree.rs
src/output/: mod.rs
tests/: integration_test.rs
